[package]
name = "trsh"
version = "0.1.0"
authors = ["fourtf <tf.four@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.16.0"
ctrlc = "3.1.4"
which = "3.1.1"
dirs = "2.0.2"
phf = { version = "0.8.0", features = ["macros"] }
